--- a/rpg/index.html
+++ b/rpg/index.html
@@ -23,12 +23,6 @@
             <h2>Characters</h2>
             <table id="character-list-table" class="table table-hover">
               <tbody>
-                <tr>
-                  <td>Conan</td>
-                <tr>
-                <tr>
-                  <td>Pikachu</td>
-                <tr>
               </tbody>
             </table>
 
@@ -49,24 +43,8 @@
             </div>
           </div>
           <div id="character-attributes">
-            <table class="table table-hover" id="character-info-table">
-              <tbody>
-                <tr>
-                  <td><strong>Type</strong></td>
-                  <td>Ranger</td>
-                </tr>
-                <tr>
-                  <td><strong>Weapon</strong></td>
-                  <td>Sword</td>
-                </tr>
-                <tr>
-                  <td><strong>Strongest Attribute</strong></td>
-                  <td>Strength</td>
-                </tr>
-                <tr>
-                  <td><strong>Weakest Attribute</strong></td>
-                  <td>Dexterity</td>
-                </tr>                  
+            <table id="character-info-table" class="table table-hover">
+              <tbody>                 
               </tbody>
             </table>
             <button id="view-items" type="button" class="btn btn-default btn-lg btn-block">View items</button>
@@ -127,73 +105,62 @@
             <div class="modal-body">
               <center>
                 <input id="character-name-input" type="text" class="form-control" placeholder="Your character's name">
-                <br>
-                <p>Select your character's <strong>type</strong>.
-                <div class="btn-group btn-group-justified" data-toggle="buttons">
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option1"> Archer
-                  </label>
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option2"> Knight
-                  </label>
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option3"> Thief
-                  </label>
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option3"> Ranger
-                  </label>
+                
+                <p>Select your character's <strong>class</strong>.</p>
+                <div>
+                  <div class="btn-group btn-group-justified" data-toggle="buttons">
+                    <label class="btn btn-default">
+                      <input type="radio" name="options" id="option1"> Archer
+                    </label>
+                    <label class="btn btn-default">
+                      <input type="radio" name="options" id="option2"> Knight
+                    </label>
+                    <label class="btn btn-default">
+                      <input type="radio" name="options" id="option3"> Thief
+                    </label>
+                    <label class="btn btn-default">
+                      <input type="radio" name="options" id="option3"> Ranger
+                    </label>
+                  </div>
                 </div>
 
-                <br>
-                <p>Select your character's <strong>weapon</strong>.
-                <div class="btn-group btn-group-justified" data-toggle="buttons">
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option1"> Sword
-                  </label>
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option2"> Bow and Arrow
-                  </label>
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option3"> Warhammer
-                  </label>
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option3"> Mace
-                  </label>
+
+                <p>Select your character's <strong>gender</strong>.</p>
+                <div>
+                  <div class="btn-group btn-group-justified" data-toggle="buttons">
+                    <label class="btn btn-default">
+                      <input type="radio" name="options" id="option1"> Male
+                    </label>
+                    <label class="btn btn-default">
+                      <input type="radio" name="options" id="option2"> Female
+                    </label>
+                  </div>
                 </div>
 
-                <br>
-                <p>Select your character's <strong>strongest</strong> attribute.
-                <div class="btn-group btn-group-justified" data-toggle="buttons">
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option1"> Strength
-                  </label>
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option2"> Dexterity
-                  </label>
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option3"> Intelligence
-                  </label>
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option3"> Stamina
-                  </label>
+
+                <p>Roll for your character's <strong>level</strong>.</p>
+                <div class="inline">
+                  <div id="rollButton" style="float: left">
+                    <button id="character-money" type="button" class="btn btn-default" >Roll</button>
+                  </div>
+
+                  <div id="rollField" style="float: right">
+                    <input type="text" class="form-control" placeholder="Click roll">
+                  </div>
                 </div>
 
-                <br>
-                <p>Select your character's <strong>weakest</strong> attribute.
-                <div class="btn-group btn-group-justified" data-toggle="buttons">
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option1"> Strength
-                  </label>
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option2"> Dexterity
-                  </label>
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option3"> Intelligence
-                  </label>
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option3"> Stamina
-                  </label>
+
+                <p>Roll for your character's <strong>money</strong>.</p>
+                <div class="inline">
+                  <div id="rollButton" style="float: left">
+                    <button id="character-money" type="button" class="btn btn-default" >Roll</button>
+                  </div>
+
+                  <div id="rollField" style="float: right">
+                    <input type="text" class="form-control" placeholder="Click roll">
+                  </div>
                 </div>
+
               </center>
             </div>
 
@@ -234,7 +201,7 @@
                             <center>
                 <input id="character-name-input" type="text" class="form-control" placeholder="Your character's name">
                 <br>
-                <p>Select your character's <strong>type</strong>.
+                <p>Change your character's <strong>class</strong>.</p>
                 <div class="btn-group btn-group-justified" data-toggle="buttons">
                   <label class="btn btn-default">
                     <input type="radio" name="options" id="option1"> Archer
@@ -251,53 +218,13 @@
                 </div>
 
                 <br>
-                <p>Select your character's <strong>weapon</strong>.
+                <p>Change your character's <strong>gender</strong>.</p>
                 <div class="btn-group btn-group-justified" data-toggle="buttons">
                   <label class="btn btn-default">
-                    <input type="radio" name="options" id="option1"> Sword
+                    <input type="radio" name="options" id="option1"> Male
                   </label>
                   <label class="btn btn-default">
-                    <input type="radio" name="options" id="option2"> Bow and Arrow
-                  </label>
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option3"> Warhammer
-                  </label>
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option3"> Mace
-                  </label>
-                </div>
-
-                <br>
-                <p>Select your character's <strong>strongest</strong> attribute.
-                <div class="btn-group btn-group-justified" data-toggle="buttons">
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option1"> Strength
-                  </label>
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option2"> Dexterity
-                  </label>
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option3"> Intelligence
-                  </label>
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option3"> Stamina
-                  </label>
-                </div>
-
-                <br>
-                <p>Select your character's <strong>weakest</strong> attribute.
-                <div class="btn-group btn-group-justified" data-toggle="buttons">
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option1"> Strength
-                  </label>
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option2"> Dexterity
-                  </label>
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option3"> Intelligence
-                  </label>
-                  <label class="btn btn-default">
-                    <input type="radio" name="options" id="option3"> Stamina
+                    <input type="radio" name="options" id="option2"> Female
                   </label>
                 </div>
               </center>
